--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <title>קניה/השכרה</title>
-  <base href="/">
+  <base href="/finance">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.svg">
   <link rel="preconnect" href="https://fonts.gstatic.com">
